# device-cli-tool

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
cli_tool/: __init__.py  models.py
cli_tool/catalog/: __init__.py  loader.py  models.py
cli_tool/catalog/data/: __init__.py  (+4 more)
cli_tool/devices/: __init__.py  base.py  registry.py
cli_tool/parsers/: __init__.py  line_card_status.py  text_tokens.py
cli_tool/reporting/: __init__.py  redaction.py  transfer.py
cli_tool/transfer/: __init__.py  base.py  ftp.py  models.py  paths.py  sftp.py
cli_tool/transport/: __init__.py  base.py  readiness.py  serial.py  ssh.py  ssh_adapter.py  ssh_host_keys.py  telnet.py
cli_tool/workflows/: __init__.py  driver_verify.py  line_card_preflight.py  verify.py
configs/cli_tool/: README.md  generic.yaml  olt140x.yaml
docs/: cli_tool_usage.md  file_transfer.md  ftp_ftps.md  integration.md  sftp_pytest_integration.md  telnet.md
examples/: device_cli_targets.example.yaml  pytest_sftp_fixture.py
tests/: test_cli_tool_builtin_catalogs.py  test_cli_tool_catalog.py  test_cli_tool_catalog_loader.py  test_cli_tool_driver_verify.py  test_cli_tool_ftp.py  test_cli_tool_ftp_cli.py  test_cli_tool_line_card_preflight.py  test_cli_tool_readonly_smoke.py  test_cli_tool_readonly_transfer.py  test_cli_tool_redaction.py  test_cli_tool_sftp.py  test_cli_tool_ssh_host_keys.py  test_cli_tool_telnet.py  test_cli_tool_telnet_smoke.py  test_cli_tool_transport.py  test_cli_tool_verify.py
tools/: __init__.py  cli_tool_readonly_smoke.py  cli_tool_readonly_transfer.py
