[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "device-cli-tool"
version = "0.2.0"
description = "Reusable multi-device CLI automation and read-only verification tool"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PyYAML>=6.0",
  "paramiko>=5.0",
  "pyserial>=3.5",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
device-cli-smoke = "tools.cli_tool_readonly_smoke:main"

[tool.pytest.ini_options]
addopts = "-vv --basetemp=.pytest-tmp"
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["cli_tool*", "tools*"]

[tool.setuptools.package-data]
"cli_tool.catalog.data" = ["*.yaml"]
